<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReportAccidentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:minHeight="200dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/input_vehicle_number_plate_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_tuktuk_motorbike_number_plate_1"
                        android:paddingLeft="5dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/input_vehicle_number_plate_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_tuktuk_motorbike_number_plate_2"
                        android:paddingLeft="5dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="10dp"
                    android:text="Accident Location Area" />

                <Spinner
                    android:id="@+id/spinner_accident_location_radius"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:entries="@array/breakdown_mombasa_places" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/input_acccident_exact_location_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_accident_exact_location"
                        android:paddingLeft="5dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/input_acccident_reporter_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_accident_reporter"
                        android:paddingLeft="5dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/input_acccident_cause"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_accident_cause"
                        android:paddingLeft="5dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_report_accident"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginBottom="10dp"
                    android:text="Report Accident"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    app:backgroundTint="#00FFB13B"
                    app:strokeColor="#8BC34A" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </ScrollView>
</LinearLayout>
